--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,17 +4,17 @@
 @string{aps = {American Physical Society,}}
 
 @article{CRMATH_2022__360_G10_1093_0,
-  author    = {Anis  M. Haddouche and Wei Lu},
-  title     = {A unified approach for covariance matrix estimation under {Stein} loss},
-  journal   = {Comptes Rendus. Math\'ematique},
-  pages     = {1093--1098},
+  author    = {Ahmad TAY and Frederic Lafont and Jean-Francois Balmat and Allel Hadjali},
+  title     = {An intelligent fuzzy system to manage western flower thrips population under biological treatment in roses yield},
+  journal   = {Computers and Electronics in Agriculture},
+  pages     = {108066},
   publisher = {Acad\'emie des sciences, Paris},
-  volume    = {360},
-  year      = {2022},
-  doi       = {10.5802/crmath.356},
-  abbr      ={CRM},
-  abstract ={In this paper, we address the problem of estimating a covariance matrix of a multivariate Gaussian distribution, from a decision theoretic point of view, relative to a Stein type loss function. We investigate the case where the covariance matrix is invertible and the case when it is non–invertible in a unified approach.},
-  pdf={Haddouche-and-Lu_CRMATH copie.pdf},
+  volume    = {212},
+  year      = {2023},
+  doi       = {10.1016/j.compag.2023.108066},
+  abbr      ={COMPAG},
+abstract={},
+  pdf={},
 }
 
 @article{HADDOUCHE2021104680,
